<resources>
    <string name="app_name">Phones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This app about Phones v1.0</string>
    <string name="samsung">Samsung</string>
    <string name="Description">Samsung A 32 is cool Phone</string>
    <string name="exit">Выход</string>
    <string name="search">поиск</string>
    <string name="delete">Удалить</string>
    <string name="send">Отправить</string>
    <string name="about">О приложении</string>
    <string name="header_title">Заголовок</string>
    <string name="imageText">Изображение</string>
    <string name="popup_delete">Удалить</string>
    <string name="Name">введите новое название</string>
    <string name="DescriptionEdit">введите новое описание</string>
    <string name="dateEdit">Измените дату</string>
    <string name="nameEdit">Измениете Название</string>
    <string name="dateChange">Измениете Дату</string>
    <string name="saveChanges">Сохранить</string>
    <string name="addItem">добавить</string>
    <string name="clear">очистить</string>
    <string name="update">обновить</string>
    <string name="searchOver">поиск завершен</string>
</resources>