<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/action_exit"
    android:title="@string/exit"
    app:showAsAction="never"
    />

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_phone_foreground"
        app:showAsAction="always"
        />

    <item android:id="@+id/searchOver"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/search"
        app:showAsAction="always"
        />
    <item android:id="@+id/addItem"
        android:icon="@drawable/ic_add_phone_foreground"
        android:title="@string/addItem"
        app:showAsAction="always"
        />

    <item android:id="@+id/clear"
        android:icon="@drawable/ic_add_phone_foreground"
        android:title="@string/clear"
        app:showAsAction="never"
        />



</menu>